# minipar

./: .gitignore  README.md  main.py  pyproject.toml
editor/: main.py
editor/static/: script.js  style.css
editor/templates/: index.html
examples/minipar/: ex1.minipar  ex2.minipar  ex3.minipar  ex9.minipar  neuronio.minipar  quicksort.minipar  recomendacao.minipar  recomendacao2.minipar  rede-neural.minipar  server.minipar  simple_nn.minipar
examples/python/: neuronio-output.txt  neuronio.py  quicksort-output.txt  quicksort.py  recomendacao-output.txt  recomendacao.py  recomendacao2-output.txt  recomendacao2.py  rede-neural-output.txt  rede-neural.py
highlight-syntax/: language-configuration.json  minipar-lang-0.0.1.vsix  package.json
highlight-syntax/syntaxes/: minipar.tmLanguage.json
highlight-syntax/themes/: minipar-theme.json
minipar/: ast.py  interpreter.py  interruptions.py  lexer.py  parser.py  runner.py  semantic.py  symbol.py  token.py  utils.py
