[project]
name = "minipar"
version = "0.1.0"
description = "Interpretador Minipar"
authors = [
    {name = "arthurpmrs", email = "apmrs@ic.ufal.br"},
    {name = "bea", email = "brc@ic.ufal.br"},
    {name = "davi", email = "dsr@ic.ufal.br"},
    {name = "gabriel", email = "ggo@ic.ufal.br"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi[standard]>=0.115.12",
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "ruff>=0.11.4",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'